crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@237.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f1, rngfuncr(f1) FROM int4_tbl;"
---
SelectStmt@0..38
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "f1"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..22
    FuncCall@11..22
      Ident@11..19 "rngfuncr"
      Ascii40@19..20 "("
      ColumnRef@20..22
        Ident@20..22 "f1"
  Ascii41@22..23 ")"
  Whitespace@23..24 " "
  From@24..28 "FROM"
  Whitespace@28..29 " "
  RangeVar@29..37
    Ident@29..37 "int4_tbl"
  Ascii59@37..38 ";"

