crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@238.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM rngfuncr(42);
---
SelectStmt@0..27
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..25
    List@14..25
      FuncCall@14..25
        Ident@14..22 "rngfuncr"
        Ascii40@22..23 "("
        AConst@23..25
          Iconst@23..25 "42"
  Ascii41@25..26 ")"
  Ascii59@26..27 ";"

