crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@239.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM rngfuncr(42) AS p(a,b);"
---
SelectStmt@0..37
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..35
    List@14..25
      FuncCall@14..25
        Ident@14..22 "rngfuncr"
        Ascii40@22..23 "("
        AConst@23..25
          Iconst@23..25 "42"
    Ascii41@25..26 ")"
    Whitespace@26..27 " "
    Alias@27..35
      As@27..29 "AS"
      Whitespace@29..30 " "
      Ident@30..31 "p"
      Ascii40@31..32 "("
      Ident@32..33 "a"
      Ascii44@33..34 ","
      Ident@34..35 "b"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

