crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@241.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f1, rngfuncb(f1, f1/2) FROM int4_tbl;"
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "f1"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..28
    FuncCall@11..28
      Ident@11..19 "rngfuncb"
      Ascii40@19..20 "("
      ColumnRef@20..22
        Ident@20..22 "f1"
      Ascii44@22..23 ","
      Whitespace@23..24 " "
      AExpr@24..28
        ColumnRef@24..26
          Ident@24..26 "f1"
        Ascii47@26..27 "/"
        AConst@27..28
          Iconst@27..28 "2"
  Ascii41@28..29 ")"
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  RangeVar@35..43
    Ident@35..43 "int4_tbl"
  Ascii59@43..44 ";"

