crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@242.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM rngfuncb(42, 99);"
---
SelectStmt@0..31
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..29
    List@14..29
      FuncCall@14..29
        Ident@14..22 "rngfuncb"
        Ascii40@22..23 "("
        AConst@23..25
          Iconst@23..25 "42"
        Ascii44@25..26 ","
        Whitespace@26..27 " "
        AConst@27..29
          Iconst@27..29 "99"
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

