crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@249.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT dup('xyz');"
---
SelectStmt@0..18
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..16
    FuncCall@7..16
      Ident@7..10 "dup"
      Ascii40@10..11 "("
      AConst@11..16
        Sconst@11..16 "'xyz'"
  Ascii41@16..17 ")"
  Ascii59@17..18 ";"

