crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@251.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM dup('xyz'::text);"
---
SelectStmt@0..31
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..29
    List@14..29
      FuncCall@14..29
        Ident@14..17 "dup"
        Ascii40@17..18 "("
        TypeCast@18..29
          AConst@18..23
            Sconst@18..23 "'xyz'"
          Typecast@23..25 "::"
          TypeName@25..29
            TextP@25..29 "text"
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

