crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@258.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION dup (f1 anycompatible, f2 anycompatiblearray, f3 out anycompatible, f4 out anycompatiblearray)\nAS 'select $1, $2' LANGUAGE sql;"
---
CreateFunctionStmt@0..143
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..19 "dup"
  Whitespace@19..20 " "
  Ascii40@20..21 "("
  FunctionParameter@21..37
    Ident@21..23 "f1"
    Whitespace@23..24 " "
    TypeName@24..37
      Ident@24..37 "anycompatible"
  Ascii44@37..38 ","
  Whitespace@38..39 " "
  FunctionParameter@39..60
    Ident@39..41 "f2"
    Whitespace@41..42 " "
    TypeName@42..60
      Ident@42..60 "anycompatiblearray"
  Ascii44@60..61 ","
  Whitespace@61..62 " "
  FunctionParameter@62..82
    Ident@62..64 "f3"
    Whitespace@64..65 " "
    OutP@65..68 "out"
    Whitespace@68..69 " "
    TypeName@69..82
      Ident@69..82 "anycompatible"
  Ascii44@82..83 ","
  Whitespace@83..84 " "
  FunctionParameter@84..109
    Ident@84..86 "f4"
    Whitespace@86..87 " "
    OutP@87..90 "out"
    Whitespace@90..91 " "
    TypeName@91..109
      Ident@91..109 "anycompatiblearray"
  Ascii41@109..110 ")"
  Newline@110..111 "\n"
  DefElem@111..129
    As@111..113 "AS"
    Whitespace@113..114 " "
    List@114..129
      Sconst@114..129 "'select $1, $2'"
  Whitespace@129..130 " "
  DefElem@130..142
    Language@130..138 "LANGUAGE"
    Whitespace@138..139 " "
    SqlP@139..142 "sql"
  Ascii59@142..143 ";"

